# retenciones-facturas-colombia

./: .gitignore  README.md  pyproject.toml  render.yaml
src/cifrato_retenciones/: __init__.py  catalogs.py  cli.py  models.py  parser.py  rules.py  serialize.py  web.py
src/cifrato_retenciones/data/: tax_catalog.json
src/cifrato_retenciones/web_static/: app.js  index.html  styles.css
tests/: test_parser_and_rules.py
